--- a/Adversarial_Training.ipynb
+++ b/Adversarial_Training.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "e188bb49",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
     "        adv_predictions = model(adv_X_batch)\n",
     "        adv_loss = lossfunction(adv_predictions, y_batch)\n",
     "\n",
-    "        # Combine clean and adversarial loss (you can also adjust weighting if you want to prioritize one over the other)\n",
+    "        # Combine clean and adversarial loss\n",
     "        total_loss = (loss + adv_loss) / 2\n",
     "        #Update the weights usning gradient descent with Adam optimizer\n",
     "        loss.backward()\n",
